<resources>
    <string name="app_name">Machine Monitor</string>

    <string name="job_save">Save</string>

    <string name="logout_title">Log out</string>

    <string name="job_info_title_1">Planned Run Time</string>
    <string name="job_info_hint_1"> </string>
    <string name="job_info_title_2">Planned Quantity</string>
    <string name="job_info_hint_2"> </string>
    <string name="job_info_title_3">Planned Cycle Time</string>
    <string name="job_info_hint_3"> </string>
    <string name="job_info_title_4">Planned Set Time</string>
    <string name="job_info_hint_4"> </string>

    <string name="start_job_title_1">Name</string>
    <string name="start_job_hint_1"> </string>
    <string name="start_job_title_2">Machine</string>
    <string name="start_job_hint_2"> </string>
    <string name="start_job_title_3">WO Number</string>
    <string name="start_job_hint_3"> </string>


    <string name="title_activity_job_info">JobInfoActivity</string>
    <string name="title_activity_job_in_progress">JobInProgress</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="login_password_hint">PIN</string>
    <string name="login_id_title">Operator ID</string>
    <string name="login_password_title">PIN</string>
    <string name="action_sign_in">Sign In</string>
    <string name="login_user_hint">ID</string>

    <string name="action_start">Start Job</string>

    <string name="job_number">WO</string>
    <string name="job_number_hint">Work Order</string>
    <string name="action_enter">Enter</string>
    <string name="action_pause">Pause</string>
    <string name="action_end">End Job</string>

    <string name="main_activity_status_text">Connecting to server</string>
    <string name="find_server_button_text">Find Server</string>
    <string name="retry_button_text">Retry</string>
    <string name="set_address_button_text">Enter Server Address</string>

    <string name="server_address_textview">Enter the full address to your server e.g. http://192.168.0.1:8000</string>
    <string name="server_address_hint"> Address e.g. http://192.168.0.1:8000</string>

    <string name="action_unpause">Resume Job</string>
    <string name="job_paused_top_text">Job paused. Enter reason for downtime:</string>
    <string name="downtime_reasons_spinner_prompt">Reason for stoppage</string>

    <string name="save">Save</string>

    <string name="lock_task_mode">Lock app</string>

    <string name="ip_textview">Server IP</string>

    <string name="job_end_text_1">Actual Quantity</string>
    <string name="action_finish">Finish</string>
    <string name="action_start_setting">Start setting</string>
    <string name="setting_text">Setting in progress</string>
    <string name="notes_hint">Notes</string>
    <string name="button_font_family">sans-serif-black</string>
    <string name="form_font_family">sans-serif-black</string>
    <string name="wo_order">Work Order</string>
    <string name="update_total_btn">Update Total \n Current:</string>
    <string name="enter_new_amount">Enter New Amount</string>


</resources>

