<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Pausable.PausableJobActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/update_total_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/job_action_button_height"
        android:layout_margin="@dimen/job_action_button_margin"
        android:fontFamily="@string/button_font_family"
        android:text="@string/update_total_btn"
        android:textSize="@dimen/job_action_button_text_size" />

    <Button
        android:id="@+id/pause_job_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/job_action_button_height"
        android:text="@string/action_pause"
        android:textSize="@dimen/job_action_button_text_size"
        android:fontFamily="@string/button_font_family"
        android:layout_margin="@dimen/job_action_button_margin"/>

    <Button
        android:id="@+id/end_job_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/job_action_button_height"
        android:text="@string/action_end"
        android:textSize="@dimen/job_action_button_text_size"
        android:fontFamily="@string/button_font_family"
        android:layout_margin="@dimen/job_action_button_margin"/>
</LinearLayout>

</FrameLayout>