<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pausable.SettingInProgress">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_code_spinner"
            android:text="@string/setting_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/form_entry_text_padding"
            android:textSize="@dimen/job_action_button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/end_job_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/job_action_button_height"
            android:text="@string/action_end"
            android:textSize="@dimen/job_action_button_text_size"
            android:fontFamily="@string/button_font_family"
            android:layout_margin="@dimen/job_action_button_margin" />
    </LinearLayout>

</FrameLayout>