<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pausable.JobPausedActivity">

    <Button
        android:id="@+id/resume_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/resume_job_button_height"
        android:text="@string/action_unpause"
        android:fontFamily="@string/button_font_family"
        android:textStyle="bold"
        android:textSize="@dimen/job_action_button_text_size"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        android:layout_margin="@dimen/pause_screen_margin"/>

    <EditText
        android:id="@+id/amount"
        android:inputType="textNoSuggestions"
        android:layout_width="match_parent"
        android:layout_height="@dimen/resume_job_button_height"
        android:background="#ffffff"
        android:hint="@string/enter_new_amount"
        android:textSize="@dimen/form_entry_inline_text_size"
        app:layout_constraintTop_toBottomOf="@+id/resume_button"
        tools:layout_editor_absoluteX="0dp"
        android:layout_margin="@dimen/pause_screen_margin"
        android:autofillHints="New Amount" />

</androidx.constraintlayout.widget.ConstraintLayout>