<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="uk.co.digitme.machinemonitoring.JobNumberActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/job_number_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/form_entry_text_padding"
            android:text="@string/job_number"
            android:textSize="@dimen/form_entry_inline_text_size"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/job_number_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="@string/job_number_hint"
            android:imeOptions="actionNext"
            android:inputType="textCapCharacters"
            android:nextFocusDown="@+id/data_entry_2"
            android:padding="@dimen/form_entry_text_padding"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textSize="@dimen/form_entry_inline_text_size" />

    </LinearLayout>

    <Button
        android:id="@+id/enter_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_entry_button_height"
        android:layout_marginTop="16dp"
        android:text="@string/action_enter"
        android:textSize="@dimen/form_entry_button_text_size"
        android:textStyle="bold" />



</LinearLayout>