<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="uk.co.digitme.machinemonitoring.JobInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/machine_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/job_info_activity_text_padding"
            android:textSize="@dimen/job_info_activity_text_size"
            android:layout_gravity="center"
            tools:text="Machine 1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_id_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/job_info_activity_text_padding"
                android:text="@string/login_id_title"
                android:textSize="@dimen/job_info_activity_text_size"
                app:layout_constraintLeft_toLeftOf="parent" />

            <EditText
                android:id="@+id/login_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:hint="@string/login_user_hint"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:nextFocusDown="@+id/data_entry_2"
                android:padding="@dimen/job_info_activity_text_padding"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textSize="@dimen/job_info_activity_edittext_size" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/job_info_activity_text_padding"
                android:text="@string/login_password_title"
                android:textSize="@dimen/job_info_activity_text_size"
                app:layout_constraintLeft_toLeftOf="parent" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:hint="@string/login_password_hint"
                android:inputType="number|numberPassword"
                android:padding="@dimen/job_info_activity_text_padding"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textSize="@dimen/job_info_activity_edittext_size"
                tools:text="" />
        </LinearLayout>




        <Button
            android:id="@+id/sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold" />


    </LinearLayout>

    <uk.co.digitme.machinemonitoring.CustomNumpadView
        android:id="@+id/keyboard_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:keyBackground="@color/colorTeal"
        android:visibility="visible" />
</RelativeLayout>