<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pausable.JobPausedActivity">

    <TextView
        android:id="@+id/job_paused_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/job_paused_top_text"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/job_paused_text">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="Component"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <Spinner
                    android:id="@+id/component_spinner"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:background="#ffffff"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="Category"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <Spinner
                    android:id="@+id/category_spinner"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:background="#ffffff"
                    android:textStyle="bold"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="Code"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <Spinner
                    android:id="@+id/filtered_activity_code_spinner"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:background="#ffffff"
                    android:textStyle="bold"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/resume_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/job_action_button_height"
            android:layout_margin="@dimen/job_action_button_margin"
            android:fontFamily="@string/button_font_family"
            android:text="@string/action_unpause"
            android:textSize="@dimen/job_action_button_text_size" />

        <EditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="@dimen/pause_screen_margin"
            android:fontFamily="@string/form_font_family"
            android:gravity="start"
            android:hint="@string/notes_hint"
            android:inputType="textNoSuggestions"
            android:textSize="@dimen/form_entry_inline_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_code_spinner"
            tools:layout_editor_absoluteX="-8dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>